src/main/resources/tests/Semantics/good/assignmentType1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : integer := 3;
begin
    X := 2;
end ExampleProcedure;
