src/main/resources/tests/Semantics/bad/assignmentType5.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : character := 3;
begin
    X;
end ExampleProcedure;
